# llama-alpacaeval-mt-bench

./: .gitignore  LLAMA3_QUICKSTART.md  README.md  pyproject.toml  run_full_generation.sh  run_full_generation_fast.sh  run_llama3_generation.sh
outputs/: alpaca_eval_llama2_base.json  alpaca_eval_llama2_chat.json  alpaca_eval_llama3_base.json  alpaca_eval_llama3_instruct.json  llama-2-13b-base.txt  llama-2-13b-chat.txt  llama-3-8b-base.txt  llama-3-8b-instruct.txt  mt_bench_llama2_base.jsonl  mt_bench_llama2_chat.jsonl  mt_bench_llama3_base.jsonl  mt_bench_llama3_instruct.jsonl
scripts/: check_environment.py  download_data.py  download_outputs.sh  generate_completions.py  generate_completions_fast.py  generate_llama3.py  test_model_loading.py  upload_llama3_to_hf.py  upload_to_hf.py
